--- a/content/characters/manifest.json
+++ b/content/characters/manifest.json
@@ -1,14 +1,18 @@
 {
-  "version": "1.1.2",
+  "version": "1.2",
   "last_updated": "2025-08-24T10:00:00Z",
   "files": {
     "en.json": {
-      "version": "1.1",
+      "version": "1.2.1",
       "description": "English characters"
     },
     "ja.json": {
-      "version": "1.1.2",
+      "version": "1.2",
       "description": "Japanese characters"
+    },
+    "de.json": {
+      "version": "1.0",
+      "description": "German characters"
     }
   }
 }
