--- a/content/characters/manifest.json
+++ b/content/characters/manifest.json
@@ -1,6 +1,6 @@
 {
-  "version": "2.14",
-  "last_updated": "2025-12-10T20:24:14Z",
+  "version": "2.15",
+  "last_updated": "2025-12-10T23:16:31Z",
   "files": {
     "en.json": {
       "version": "2.0",
@@ -13,6 +13,10 @@
     "de.json": {
       "version": "2.1",
       "description": "German characters"
+    },
+    "pfp.png": {
+      "version": "1.0",
+      "description": ""
     }
   }
 }
