--- a/content/characters/manifest.json
+++ b/content/characters/manifest.json
@@ -1,6 +1,6 @@
 {
-  "version": "3.1",
-  "last_updated": "2025-12-15T19:15:00Z",
+  "version": "3.2",
+  "last_updated": "2025-12-15T15:36:14Z",
   "files": {
     "en.json": {
       "version": "3.1",
@@ -13,6 +13,10 @@
     "de.json": {
       "version": "3.1",
       "description": "German characters"
+    },
+    "manifest.json": {
+      "version": "1.0",
+      "description": ""
     }
   }
 }
