--- a/content/characters/manifest.json
+++ b/content/characters/manifest.json
@@ -1,27 +1,11 @@
 {
-  "version": "4.0",
-  "last_updated": "2025-12-21T15:08:30.957819Z",
-  "languages": {
-    "en": {
-      "display_name": "English",
-      "characters": [
-        "AIbro"
-      ]
-    },
-    "ja": {
-      "display_name": "日本語",
-      "characters": [
-        "AIko",
-        "AIto",
-        "Riko",
-        "Haruki"
-      ]
-    },
-    "de": {
-      "display_name": "Deutsch",
-      "characters": [
-        "Max"
-      ]
-    }
+  "version": "1.0",
+  "files": {
+    "de/Max/config.json": {"version": "1.0"},
+    "en/AIbro/config.json": {"version": "1.0"},
+    "ja/AIko/config.json": {"version": "1.0"},
+    "ja/AIto/config.json": {"version": "1.0"},
+    "ja/Haruki/config.json": {"version": "1.0"},
+    "ja/Riko/config.json": {"version": "1.0"}
   }
 }
