--- a/content/characters/manifest.json
+++ b/content/characters/manifest.json
@@ -1,11 +1,24 @@
 {
   "version": "1.0",
   "files": {
-    "de/Max/config.json": {"version": "1.0"},
-    "en/AIbro/config.json": {"version": "1.0"},
-    "ja/AIko/config.json": {"version": "1.0"},
-    "ja/AIto/config.json": {"version": "1.0"},
-    "ja/Haruki/config.json": {"version": "1.0"},
-    "ja/Riko/config.json": {"version": "1.0"}
-  }
+    "de/Max/config.json": {
+      "version": "1.0"
+    },
+    "en/AIbro/config.json": {
+      "version": "1.0"
+    },
+    "ja/AIko/config.json": {
+      "version": "1.0"
+    },
+    "ja/AIto/config.json": {
+      "version": "1.0"
+    },
+    "ja/Haruki/config.json": {
+      "version": "1.0"
+    },
+    "ja/Riko/config.json": {
+      "version": "1.0"
+    }
+  },
+  "last_sync": "2025-12-21T17:23:17.929664"
 }
