--- a/content/characters/ja/Riko/config.json
+++ b/content/characters/ja/Riko/config.json
@@ -50,7 +50,7 @@
   "fixed_phrases": {
     "error": {
       "default": [
-        "あれ？うまくいかなかったみたい。もう一回やってみよっか。"
+        "あれ？応答がうまくいかなかったみたい。もう一回やってみよっか。"
       ]
     }
   },
@@ -61,4 +61,5 @@
     "models_2d": "assets/models/2d/",
     "models_3d": "assets/models/3d/"
   }
+
 }
