--- a/content/fixed_phrases/manifest.json
+++ b/content/fixed_phrases/manifest.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.1",
+  "version": "1.2",
   "description": "Fixed phrase audio files for characters to avoid TTS service costs",
   "structure": {
     "languages": [
@@ -116,6 +116,11 @@
       "character": "Max",
       "service": "ELEVENLABS",
       "phrase_type": "error"
+    },
+    "manifest.json": {
+      "version": "1.0",
+      "description": ""
     }
-  }
+  },
+  "last_updated": "2025-12-24T11:05:35Z"
 }
