--- a/content/characters/ja/AIto/config.json
+++ b/content/characters/ja/AIto/config.json
@@ -30,7 +30,10 @@
       "pitch_scale": 1,
       "intonation_scale": 1
     },
-    "VOICEVOX": {},
+    "VOICEVOX": {
+      "voice_name": "白上虎太郎",
+      "style_name": "ふつう"
+    },
     "ELEVENLABS": {
       "voice_id": "SOYHLrjzK2X1ezoPC6cr",
       "voice_name": "Harry"
@@ -52,6 +55,11 @@
       "default": [
         "おっと、ちょっと応答がミスっちゃったみたい。もう一回試してみてくれる？"
       ]
+    },
+    "no_speech": {
+      "default": [
+        "あれ？ごめん、ちょっと聞こえなかったかも。もう一回言ってくれる？"
+      ]
     }
   },
   "assets": {
@@ -61,5 +69,4 @@
     "models_2d": "assets/models/2d/",
     "models_3d": "assets/models/3d/"
   }
-
 }
