--- a/content/characters/ja/Haruki/config.json
+++ b/content/characters/ja/Haruki/config.json
@@ -30,7 +30,10 @@
       "pitch_scale": 1,
       "intonation_scale": 1
     },
-    "VOICEVOX": {},
+    "VOICEVOX": {
+      "voice_name": "栗田まろん",
+      "style_name": "ノーマル"
+    },
     "ELEVENLABS": {
       "voice_id": "cjVigY5qzO86Huf0OWal",
       "voice_name": "Eric"
@@ -52,6 +55,11 @@
       "default": [
         "あれ？ちょっと応答がズレちゃったみたい。もう一回トライしてみよっか！"
       ]
+    },
+    "no_speech": {
+      "default": [
+        "おっと、ちょっと聞こえなかったかも！もう一回言ってくれる？"
+      ]
     }
   },
   "assets": {
@@ -61,5 +69,4 @@
     "models_2d": "assets/models/2d/",
     "models_3d": "assets/models/3d/"
   }
-
 }
